src/css/components/pagination.css
@layer components {
  :where([elv]) .pagination,
  :where([elv]).pagination {
    @apply elv-flex elv-gap-2 elv-font-figtree elv-list-none elv-m-0 elv-p-0;
  }

  :where([elv]) .pagination__only-nessy,
  :where([elv]).pagination__only-nessy {
    @apply elv-hidden;
  }

  :where([elv]) .pagination__only-elv,
  :where([elv]).pagination__only-elv {
    @apply elv-flex elv-items-center elv-justify-center;
  }

  :where([elv]) .pagination__component,
  :where([elv]).pagination__component {
    @apply elv-size-8
      elv-flex
      elv-items-center
      elv-justify-center;
  }

  :where([elv]) .pagination__component--disabled,
  :where([elv]).pagination__component--disabled {
    @apply elv-border-none
      elv-rounded-sm
      elv-text-disabled
      elv-bg-neutral-10;
  }

  :where([elv]) .pagination__component-gap,
  :where([elv]).pagination__component-gap {
    @apply
      elv-flex
      elv-items-center
      elv-justify-center
      elv-pointer-events-none
      elv-rounded-sm
      elv-text-sm
      elv-text-subtle;
  }

  :where([elv]) .pagination__page-number--current,
  :where([elv]).pagination__page-number--current {
    @apply
      elv-bg-primary-20
      elv-border
      elv-border-focus
      elv-flex
      elv-items-center
      elv-justify-center
      elv-text-sm
      elv-text-subtle
      elv-rounded-sm;
  }

  :where([elv]) .pagination__named-link,
  :where([elv]).pagination__named-link,
  :where([elv]) .pagination__page-number-link,
  :where([elv]).pagination__page-number-link {
    @apply a--reset
      elv-flex
      elv-items-center
      elv-justify-center
      elv-max-w-full
      elv-size-8
      elv-font-normal
      elv-text-sm
      elv-text-subtle
      elv-cursor-pointer
      elv-border-transparent
      elv-border
      elv-rounded-sm
      hover:elv-text-subtle
      visited:elv-text-subtle
      hover:elv-border
      hover:elv-border-focus
      hover:elv-bg-primary-20
      elv-ease-in-out
      elv-duration-150;
  }

  :where([elv]) .pagination__named-link,
  :where([elv]).pagination__named-link {
    @apply elv-border
      elv-flex
      elv-items-center
      elv-justify-center
      elv-border-neutral
      elv-bg-neutral-10;
  }
}

